tdf#91969: Parts of paragraph border is missing

...when border is around more than one paragraph

Regression from:
16f637dab3c1b5f7ac9eacf2c57347800d3fdf09

Change-Id: Iea9455dd7cc3c301c3e2d5d7903c98d98e515595
(cherry picked from commit 8d933132ab01f0070225fae6cf704c9a1982e8f8)
Reviewed-on: https://gerrit.libreoffice.org/17979
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>